--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/mobile_subscription
+spring.datasource.url=jdbc:mysql://localhost:3306/mobile_subscriptions
 spring.datasource.username=root
-spring.datasource.password=root
-
-# Hibernate Configuration
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
-
-# Hibernate SQL Logging
-logging.level.org.hibernate.SQL = DEBUG
-logging.level.org.hibernate.type = TRACE
-
-# Allow Bean dependencies
-spring.main.allow-circular-references=true
-spring.main.allow-bean-definition-overriding=true
-
-port=8090
