--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,17 @@
             <version>1.18.22</version>
             <scope>compile</scope>
         </dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-data-rest</artifactId>
+			<version>1.6.9</version>
+		</dependency>
     </dependencies>
 
 	<build>
